--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     
         <article>
             <div class="border">
-                <div><h4>A Flex Box is a module that makes it easier to design a more flexible and responsive layout</h4></div>
-                <div><h4>without the use of float or positioning (these sentences are in a flex box!)</h4></div>
+                <div><h4>A Flex Box is a module that makes it easier to design a more flexible and responsive layout
+                without the use of float or positioning (these sentences are in a flex box!)</h4></div>
                 <div><h6>Thank you W3 for the explanation.</h6></div>
             </div>
 
             <div class="border">
                 <div><h2>This is a Flex Container.</h2></div>
-                <div><p>This is a default Flex Container.</p></div>
+                <div><p>This is the default Flex Container.</p></div>
                 <div><p>It is pretty cool.</p></div>
             </div>
         </article>
@@ -29,10 +29,57 @@
         <hr>
         <br>
 
+        <h2>Direction Example</h2>
         <article>
-            <div class="border">
-                <div><h2></h2></div>
+
+            <div class="border" id="column">
+                <div><h2>Column</h2></div>
+                <div><h4>1</h4></div>
+                <div><h4>2</h4></div>
+                <div><h4>3</h4></div>
             </div>
+        </article>
+
+        <br>
+        <hr>
+        <br>
+
+        <article>
+            <h2>Justify Examples</h2>
+                <div class="border" id="center">
+                    <div><h2>Centered</h2></div>
+                    <div><h4>1</h4></div>
+                    <div><h4>2</h4></div>
+                    <div><h4>3</h4></div>
+                </div>
+
+                <div class="border" id="start">
+                    <div><h2>Start</h2></div>
+                    <div><h4>1</h4></div>
+                    <div><h4>2</h4></div>
+                    <div><h4>3</h4></div>
+                </div>
+
+                <div class="border" id="end">
+                    <div><h2>End</h2></div>
+                    <div><h4>1</h4></div>
+                    <div><h4>2</h4></div>
+                    <div><h4>3</h4></div>
+                </div>
+
+                <div class="border" id="around">
+                    <div><h2>Space Around</h2></div>
+                    <div><h4>1</h4></div>
+                    <div><h4>2</h4></div>
+                    <div><h4>3</h4></div>
+                </div>
+
+                <div class="border" id="between">
+                    <div><h2>Space Between</h2></div>
+                    <div><h4>1</h4></div>
+                    <div><h4>2</h4></div>
+                    <div><h4>3</h4></div>
+                </div>
         </article>
     </body>
 </html>
