--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <h1 class="center">What is a Flex Box?</h1>
     
         <article>
-            <div class="headborder">
+            <div class="flex-containerhead">
                 <div class="center"><h4>A Flex Box is a module that makes it easier to design a more flexible and responsive layout
                 without the use of float or positioning (these sentences are in a flex box!)</h4></div>
                 <div class="center"><h6><i>Thank you W3 for the explanation.</i></h6></div>
             </div>
 
-            <div class="headborder">
+            <div class="flex-containerhead">
                 <div class="center"><h2>This is a Flex Container.</h2></div>
                 <div class="center"><p>This is the default Flex Container.</p></div>
                 <div class="center"><p>It is pretty cool.</p></div>
@@ -40,8 +40,8 @@
         <h2 class="center">Direction Example</h2>
         <article>
 
-            <div class="border">
-                <div class="center"><h2>Column</h2></div>
+            <div class="flex-containercol">
+                <div class="center" style="width:200px"><h2>Column</h2></div>
                 <hr>
                 <div class="column"><h4>1</h4></div>
                 <div class="column"><h4>2</h4></div>
@@ -53,10 +53,9 @@
         <hr>
         <br>
 
-        <article id="contentcenter">
+        <article>
             <h2 class="center">Justify Examples</h2>
-
-                <div class="border">
+                <div class="flex-containerstart">
                     <div class="center"><h2>Start</h2></div>
                     <hr>
                     <div class="start"><h4>1</h4></div>
@@ -102,30 +101,36 @@
             <br>
             <br>
 
-            <div class="border">
+            <div class="flex-container">
                 <div class="center"><h2>Flex Grow</h2></div>
                 <hr>
-                <div class="grow"><h4>1</h4></div>
-                <div class="grow" style="flex-grow:8;"><h4>2</h4></div>
-                <div class="grow"><h4>3</h4></div>
+                <div><h4>1</h4></div>
+                <div style="flex-grow:8;"><h4>2</h4></div>
+                <div><h4>3</h4></div>
             </div>
 
             <div class="border2">
                 <div class="center"><h2>Flex align-self</h2></div>
                 <hr>
                 <div class="self"><h4>1</h4></div>
-                <div class="self2"><h4>1</h4></div>
-                <div class="self"><h4>1</h4></div>
+                <div class="self2"><h4>2</h4></div>
+                <div class="self"><h4>3</h4></div>
             </div>
 
             <div class="border">
                 <div class="center"><h2>Flex Order</h2></div>
-            <hr>
-            <div class="order" style="order:2"><h4>1</h4></div>
-            <div class="order" style="order:3"><h4>2</h4></div>
-            <div class="order" style="order:1"><h4>3</h4></div>
+                <hr>
+                <div class="order" style="order:2"><h4>1</h4></div>
+                <div class="order" style="order:3"><h4>2</h4></div>
+                <div class="order" style="order:1"><h4>3</h4></div>
             </div>
         </article>
+
+        <div class="flex-container">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+        </div>
 
     </body>
 </html>
