--- a/index.html
+++ b/index.html
@@ -42,10 +42,9 @@
 
             <div class="flex-containercol">
                 <div class="center" style="width:200px"><h2>Column</h2></div>
-                <hr>
-                <div class="column"><h4>1</h4></div>
-                <div class="column"><h4>2</h4></div>
-                <div class="column"><h4>3</h4></div>
+                <div><h4>1</h4></div>
+                <div><h4>2</h4></div>
+                <div><h4>3</h4></div>
             </div>
         </article>
 
@@ -58,33 +57,33 @@
                 <div class="flex-containerstart">
                     <div class="center"><h2>Start</h2></div>
                     <hr>
-                    <div class="start"><h4>1</h4></div>
-                    <div class="start"><h4>2</h4></div>
-                    <div class="start"><h4>3</h4></div>
+                    <div><h4>1</h4></div>
+                    <div><h4>2</h4></div>
+                    <div><h4>3</h4></div>
                 </div>
 
-                <div class="border">
+                <div class="flex-containerend">
                     <div class="center"><h2>End</h2></div>
                     <hr>
-                    <div class="end"><h4>1</h4></div>
-                    <div class="end"><h4>2</h4></div>
-                    <div class="end"><h4>3</h4></div>
+                    <div><h4>1</h4></div>
+                    <div><h4>2</h4></div>
+                    <div><h4>3</h4></div>
                 </div>
 
-                <div class="border">
+                <div class="flex-containerar">
                     <div class="center"><h2>Space Around</h2></div>
                     <hr>
-                    <div class="around"><h4>1</h4></div>
-                    <div class="around"><h4>2</h4></div>
-                    <div class="around"><h4>3</h4></div>
+                    <div><h4>1</h4></div>
+                    <div><h4>2</h4></div>
+                    <div><h4>3</h4></div>
                 </div>
 
-                <div class="border">
+                <div class="flex-containerbt">
                     <div class="center"><h2>Space Between</h2></div>
                     <hr>
-                    <div class="between"><h4>1</h4></div>
-                    <div class="between"><h4>2</h4></div>
-                    <div class="between"><h4>3</h4></div>
+                    <div><h4>1</h4></div>
+                    <div><h4>2</h4></div>
+                    <div><h4>3</h4></div>
                 </div>
         </article>
 
@@ -92,9 +91,23 @@
         <hr>
         <br>
 
+        <h2 class="center">Flex Wrap Examples</h2>
+        <article>
+            <div class="flex-containerwrr">
+                <div class="center"><h2>Wrap Reverse</h2></div>
+                <hr>
+                <div><h4>1</h4></div>
+                <div><h4>2</h4></div>                
+                <div><h4>3</h4></div>
+                <hr>
+                <div class="center"><h2>Try Resizing The Window</h2></div>            
+            </div>
+            </article>
+
         <h1 class="center">Flex Item Examples</h1>
 
         <article>
+
             <br>
             <br>
             <hr>
@@ -109,20 +122,20 @@
                 <div><h4>3</h4></div>
             </div>
 
-            <div class="border2">
-                <div class="center"><h2>Flex align-self</h2></div>
+            <div class="flex-containerself">
+                <div class="center"><h2>Flex Self Align</h2></div>
                 <hr>
-                <div class="self"><h4>1</h4></div>
-                <div class="self2"><h4>2</h4></div>
-                <div class="self"><h4>3</h4></div>
+                <div><h4>1</h4></div>
+                <div style="align-self:center"><h4>2</h4></div>
+                <div><h4>3</h4></div>
             </div>
 
-            <div class="border">
+            <div class="flex-containerorder">
                 <div class="center"><h2>Flex Order</h2></div>
                 <hr>
-                <div class="order" style="order:2"><h4>1</h4></div>
-                <div class="order" style="order:3"><h4>2</h4></div>
-                <div class="order" style="order:1"><h4>3</h4></div>
+                <div style="order:2"><h4>1</h4></div>
+                <div style="order:3"><h4>2</h4></div>
+                <div style="order:1"><h4>3</h4></div>
             </div>
         </article>
 
