--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
 
         <article>
             <h2 class="center">Justify Examples</h2>
-                <div class="flex-containerstart">
+                <!-- <div class="flex-containerstart">
                     <div class="center"><h2>Start</h2></div>
                     <hr>
                     <div><h4>1</h4></div>
                     <div><h4>2</h4></div>
                     <div><h4>3</h4></div>
-                </div>
+                </div> -->
 
                 <div class="flex-containerend">
                     <div class="center"><h2>End</h2></div>
@@ -91,18 +91,29 @@
         <hr>
         <br>
 
-        <h2 class="center">Flex Wrap Examples</h2>
+        <h2 class="center">Flex Align Items Examples</h2>
         <article>
-            <div class="flex-containerwrr">
-                <div class="center"><h2>Wrap Reverse</h2></div>
+            <div class="flex-containeralc">
+                <div class="center"><h2>Align Center</h2></div>
                 <hr>
                 <div><h4>1</h4></div>
-                <div><h4>2</h4></div>                
+                <div><h4>2</h4></div>
                 <div><h4>3</h4></div>
-                <hr>
-                <div class="center"><h2>Try Resizing The Window</h2></div>            
             </div>
+
+            <div class="flex-containerend1">
+                <div class="center"><h2>Align End</h2></div>
+                <hr>
+                <div><h4>1</h4></div>
+                <div><h4>2</h4></div>
+                <div><h4>3</h4></div>
+            </div>
+
             </article>
+
+            <br>
+            <hr>
+            <br>
 
         <h1 class="center">Flex Item Examples</h1>
 
