--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,57 @@
         <link rel="stylesheet" href="css/main2.css">
         <title>Flex Box</title>
     </head>
-    <body>
+    <body class="flex-containercent">
         <h1>What Is a Flex Box?</h1>
+        <h2>A Flex Box is a module that makes it easier to design a better layout without the use of float or positioning</h2>
+
+        <div class="flex-container">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+        </div>
+        
+        <br>
+        <hr>
+
+        <h1>Flex Container Examples</h1>
+
+        <hr>
+        <br>
+
+        <h2>Flex Direction</h2>
+        <div class="flex-container" id="column">
+            <div>Column</div>
+            <p>-------------------------------------------</p> 
+            <!--The line above (line 30) makes a line that <hr> does not make for some reason-->
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+        </div>
+
+        <br>
+
+        <div class="flex-container" id="column-reverse">
+            <div>Column Reverse</div>
+            <p>-------------------------------------------</p>
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+        </div>
+
+        <div class="flex-container" id="row-reverse">
+            <div>Row Reverse</div>
+            <hr>
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+        </div>
+
+        <div class="flex-container" id="explaindirection">
+            <div>Column makes the contents arrange into a column.</div>
+            <div>Column Reverse makes the contents reversed and arrange into a column.</div>
+            <div>Row Reverse reverses the order of the contents in a row.</div>
+        </div>
+
     </body>
 </html>
