--- a/index.html
+++ b/index.html
@@ -7,152 +7,194 @@
         <link rel="stylesheet" href="css/main.css">
         <title>Flex Box</title>
     </head>
-
-    <body>
-        <h1 class="center">What is a Flex Box?</h1>
-    
-        <article>
-            <div class="flex-containerhead">
-                <div class="center"><h4>A Flex Box is a module that makes it easier to design a more flexible and responsive layout
-                without the use of float or positioning (these sentences are in a flex box!)</h4></div>
-                <div class="center"><h6><i>Thank you W3 for the explanation.</i></h6></div>
-            </div>
-
-            <div class="flex-containerhead">
-                <div class="center"><h2>This is a Flex Container.</h2></div>
-                <div class="center"><p>This is the default Flex Container.</p></div>
-                <div class="center"><p>It is pretty cool.</p></div>
-            </div>
-        </article>
-
-        <br>
-        <hr>
-        <br>
-
-        <h1 class="center">Flex Container Examples</h1>
+    <body class="flex-containercent">
+        <h1>What Is a Flex Box?</h1>
+        <h2>A Flex Box is a module that makes it easier to design a better layout without the use of float or positioning</h2>
 
         <br>
         <br>
-        <hr>
         <br>
         <br>
 
-        <h2 class="center">Direction Example</h2>
-        <article>
-
-            <div class="flex-containercol">
-                <div class="center" style="width:200px"><h2>Column</h2></div>
-                <div><h4>1</h4></div>
-                <div><h4>2</h4></div>
-                <div><h4>3</h4></div>
-            </div>
-        </article>
-
-        <br>
-        <hr>
-        <br>
-
-        <article>
-            <h2 class="center">Justify Examples</h2>
-                <!-- <div class="flex-containerstart">
-                    <div class="center"><h2>Start</h2></div>
-                    <hr>
-                    <div><h4>1</h4></div>
-                    <div><h4>2</h4></div>
-                    <div><h4>3</h4></div>
-                </div> -->
-
-                <div class="flex-containerend">
-                    <div class="center"><h2>End</h2></div>
-                    <hr>
-                    <div><h4>1</h4></div>
-                    <div><h4>2</h4></div>
-                    <div><h4>3</h4></div>
-                </div>
-
-                <div class="flex-containerar">
-                    <div class="center"><h2>Space Around</h2></div>
-                    <hr>
-                    <div><h4>1</h4></div>
-                    <div><h4>2</h4></div>
-                    <div><h4>3</h4></div>
-                </div>
-
-                <div class="flex-containerbt">
-                    <div class="center"><h2>Space Between</h2></div>
-                    <hr>
-                    <div><h4>1</h4></div>
-                    <div><h4>2</h4></div>
-                    <div><h4>3</h4></div>
-                </div>
-        </article>
-
-        <br>
-        <hr>
-        <br>
-
-        <h2 class="center">Flex Align Items Examples</h2>
-        <article>
-            <div class="flex-containeralc">
-                <div class="center"><h2>Align Center</h2></div>
-                <hr>
-                <div><h4>1</h4></div>
-                <div><h4>2</h4></div>
-                <div><h4>3</h4></div>
-            </div>
-
-            <div class="flex-containerend1">
-                <div class="center"><h2>Align End</h2></div>
-                <hr>
-                <div><h4>1</h4></div>
-                <div><h4>2</h4></div>
-                <div><h4>3</h4></div>
-            </div>
-
-            </article>
-
-            <br>
-            <hr>
-            <br>
-
-        <h1 class="center">Flex Item Examples</h1>
-
-        <article>
-
-            <br>
-            <br>
-            <hr>
-            <br>
-            <br>
-
-            <div class="flex-container">
-                <div class="center"><h2>Flex Grow</h2></div>
-                <hr>
-                <div><h4>1</h4></div>
-                <div style="flex-grow:8;"><h4>2</h4></div>
-                <div><h4>3</h4></div>
-            </div>
-
-            <div class="flex-containerself">
-                <div class="center"><h2>Flex Self Align</h2></div>
-                <hr>
-                <div><h4>1</h4></div>
-                <div style="align-self:center"><h4>2</h4></div>
-                <div><h4>3</h4></div>
-            </div>
-
-            <div class="flex-containerorder">
-                <div class="center"><h2>Flex Order</h2></div>
-                <hr>
-                <div style="order:2"><h4>1</h4></div>
-                <div style="order:3"><h4>2</h4></div>
-                <div style="order:1"><h4>3</h4></div>
-            </div>
-        </article>
-
-        <div class="flex-container">
+        <div class="flex-container" id="exflex">
             <div>1</div>
             <div>2</div>
+            <div>3</div>
+        </div>
+        
+        <br>
+        <hr>
+
+        <h1>Flex Container Examples</h1>
+
+        <hr>
+        <br>
+
+        <h2>Flex Direction</h2>
+        <br>
+        <div class="flex-container" id="column">
+            <div>Column</div>
+            <p>-------------------------------------------</p> 
+            <!--The line above (line 30) makes a line that <hr> does not make for some reason-->
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+        </div>
+
+        <br>
+
+        <div class="flex-container" id="column-reverse">
+            <div>Column Reverse</div>
+            <p>-------------------------------------------</p>
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+        </div>
+
+        <div class="flex-container" id="row-reverse">
+            <div>Row Reverse</div>
+            <hr>
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+        </div>
+
+        <div class="flex-container" id="explaindirection">
+            <div>Column makes the contents arrange into a column.</div>
+            <div>Column Reverse makes the contents reversed and arrange into a column.</div>
+            <div>Row Reverse reverses the order of the contents in a row.</div>
+        </div>
+
+        <br>
+        <br>
+        <br>
+        <br>
+        <hr>
+        <br>
+
+        <h2>Flex Justify Examples</h2>
+
+        <div class="flex-container" id="just-center">
+            <div>Justify Center</div>
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+        </div>
+
+        <br>
+
+        <div class="flex-container" id="just-flexstart">
+            <div>Justify Flex Start</div>
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+        </div>
+
+        <br>
+
+        <div class="flex-container" id="just-flexend">
+            <div>Justify Flex End</div>
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+        </div>
+
+        <br>
+
+        <div class="flex-container" id="just-around">
+            <div>Justify Space Around</div>
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+        </div>
+
+        <br>
+
+        <div class="flex-container" id="just-between">
+            <div>Justify Space Between</div>
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+        </div>
+
+        <br>
+        <br>
+        <hr>
+        <br>
+
+        <h2>Align Items Examples</h2>
+
+        <div class="flex-container" id="align-center">
+            <div>Align Center</div>
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+        </div>
+
+        <br>
+
+        <div class="flex-container" id="align-flexstart">
+            <div>Align Flex Start</div>
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+        </div>
+
+        <br>
+
+        <div class="flex-container" id="align-flexend">
+            <div>Align Flex End</div>
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+        </div>
+
+        <br>
+
+        <div class="flex-container" id="align-stretch">
+            <div>Align Stretch</div>
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+        </div>
+
+        <br>
+        <br>
+        <br>
+
+        <hr>
+        <h1>Flex Items Examples</h1>
+        <hr>
+        <br>
+
+        <h2>Order Example</h2>
+
+        <div class="flex-container" id="order">
+            <div>Order</div>
+            <div style="order:3;">1</div>
+            <div style="order:1;">2</div>
+            <div style="order:2;">3</div>
+        </div>
+        <br>
+
+        <hr>
+        <h2>Flex Grow Example</h2>
+
+        <div class="flex-container" id="grow">
+            <div>Flex Grow</div>
+            <div style="flex-grow:1;">1</div>
+            <div style="flex-grow:1;">2</div>
+            <div style="flex-grow:3;">3</div>
+        </div>
+        <br>
+
+        <hr>
+        <h2>Flex-Basis Example</h2>
+
+        <div class="flex-container" id="basis">
+            <div>Flex Basis</div>
+            <div>1</div>
+            <div style="flex-basis:200px;">2</div>
             <div>3</div>
         </div>
 
